--- a/CW2-assignment-manager/Views/Base.lproj/Main.storyboard
+++ b/CW2-assignment-manager/Views/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <viewController title="Project Details" id="uUX-Qs-BzN" userLabel="Assignment Details" customClass="DetailViewController" customModule="CW2_assignment_manager" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wb8-LL-F1E">
-                        <rect key="frame" x="0.0" y="0.0" width="703.5" height="768"/>
+                        <rect key="frame" x="0.0" y="0.0" width="703" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EQK-WU-rdC">
@@ -32,10 +32,10 @@
                                 <rect key="frame" x="50" y="25" width="603.5" height="130"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4nH-5k-jMc">
-                                        <rect key="frame" x="0.0" y="0.0" width="161.5" height="130"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="159.5" height="130"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rwr-w9-4do" customClass="CircleProgressBar">
-                                                <rect key="frame" x="31" y="0.0" width="100" height="100"/>
+                                                <rect key="frame" x="29.5" y="0.0" width="100" height="100"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="ngz-nI-TBM"/>
@@ -43,7 +43,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Complete" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ovd-a3-MeK">
-                                                <rect key="frame" x="36" y="108" width="90" height="22"/>
+                                                <rect key="frame" x="34.5" y="108" width="90" height="22"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -51,34 +51,34 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="KhI-Gn-aFG">
-                                        <rect key="frame" x="181.5" y="0.0" width="216" height="130"/>
+                                        <rect key="frame" x="179.5" y="0.0" width="221" height="130"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Module" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hhE-gf-LLn">
-                                                <rect key="frame" x="67" y="0.0" width="82" height="29"/>
+                                                <rect key="frame" x="69.5" y="0.0" width="82" height="29"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="23"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Project Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GK3-GW-OjA">
-                                                <rect key="frame" x="58" y="35" width="99.5" height="22.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Assignment Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GK3-GW-OjA">
+                                                <rect key="frame" x="41" y="35" width="138.5" height="22.5"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="18"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Level" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I9f-I7-4dK">
-                                                <rect key="frame" x="89" y="63.5" width="38" height="18.5"/>
+                                                <rect key="frame" x="91.5" y="63.5" width="38" height="18.5"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="15"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Value |  Mark Awarded" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQR-ae-r9K">
-                                                <rect key="frame" x="41" y="88" width="133.5" height="16.5"/>
+                                                <rect key="frame" x="43.5" y="88" width="133.5" height="16.5"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="13"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cyh-5W-3eb">
-                                                <rect key="frame" x="88" y="110.5" width="40" height="19.5"/>
+                                                <rect key="frame" x="90.5" y="110.5" width="40" height="19.5"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -86,10 +86,10 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bTe-Kb-txY">
-                                        <rect key="frame" x="417.5" y="0.0" width="186" height="130"/>
+                                        <rect key="frame" x="420.5" y="0.0" width="183" height="130"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XVk-Fz-aGf" customClass="CircleProgressBar">
-                                                <rect key="frame" x="43" y="0.0" width="100" height="100"/>
+                                                <rect key="frame" x="41.5" y="0.0" width="100" height="100"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="100" id="XXL-PY-NiC"/>
@@ -97,7 +97,7 @@
                                                 </constraints>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Days Left" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDi-vI-ySw">
-                                                <rect key="frame" x="49" y="108" width="87.5" height="22"/>
+                                                <rect key="frame" x="47.5" y="108" width="87.5" height="22"/>
                                                 <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="20"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -280,13 +280,13 @@
                     </view>
                     <connections>
                         <outlet property="addTaskButton" destination="EQK-WU-rdC" id="0uu-wY-8qc"/>
+                        <outlet property="assignmentMetaLabel" destination="lQR-ae-r9K" id="tJK-Cl-srL"/>
+                        <outlet property="assignmentTitleLabel" destination="GK3-GW-OjA" id="D4O-Ae-hb5"/>
                         <outlet property="daysRemainingCircleView" destination="XVk-Fz-aGf" id="mb3-kf-UNd"/>
                         <outlet property="levelLabel" destination="I9f-I7-4dK" id="X2M-m3-c6x"/>
                         <outlet property="moduleLabel" destination="hhE-gf-LLn" id="uO7-7z-Ic9"/>
+                        <outlet property="notesLabel" destination="Cyh-5W-3eb" id="UFq-kc-DnX"/>
                         <outlet property="percentageCircleView" destination="rwr-w9-4do" id="Pxd-Wd-MXN"/>
-                        <outlet property="projectMetaLabel" destination="lQR-ae-r9K" id="46S-Qe-JsV"/>
-                        <outlet property="projectNotesLabel" destination="Cyh-5W-3eb" id="WPT-DJ-1gn"/>
-                        <outlet property="projectTitleLabel" destination="GK3-GW-OjA" id="gPm-G7-PRn"/>
                         <outlet property="tasksTableView" destination="qHn-Qg-5G1" id="lek-jz-ghh"/>
                     </connections>
                 </viewController>
@@ -303,7 +303,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ProjectCell" id="f4V-jE-U9B" customClass="ProjectCell" customModule="CW2_assignment_manager" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AssignmentCell" id="f4V-jE-U9B" customClass="AssignmentCell" customModule="CW2_assignment_manager" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="320" height="128.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="f4V-jE-U9B" id="QuA-77-yeK">
@@ -413,14 +413,14 @@
                     <navigationItem key="navigationItem" title="Assignments" id="HUm-Hc-ZR5">
                         <barButtonItem key="rightBarButtonItem" title="Item" image="add" id="KbF-8P-md7">
                             <connections>
-                                <segue destination="gaU-PX-hh8" kind="popoverPresentation" identifier="projectViewSegue" popoverAnchorBarButtonItem="KbF-8P-md7" id="b4o-wj-RsV">
+                                <segue destination="gaU-PX-hh8" kind="popoverPresentation" identifier="assignmentViewSegue" popoverAnchorBarButtonItem="KbF-8P-md7" id="b4o-wj-RsV">
                                     <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                 </segue>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="addProjectButton" destination="KbF-8P-md7" id="clq-CY-sSk"/>
+                        <outlet property="addAssignmentButton" destination="KbF-8P-md7" id="z6P-92-9bw"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3uZ-Jn-k6g" userLabel="First Responder" sceneMemberID="firstResponder"/>
