--- a/CW2-assignment-manager/Views/Base.lproj/Main.storyboard
+++ b/CW2-assignment-manager/Views/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
             <objects>
                 <viewController title="Project Details" id="uUX-Qs-BzN" userLabel="Assignment Details" customClass="DetailViewController" customModule="CW2_assignment_manager" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Wb8-LL-F1E">
-                        <rect key="frame" x="0.0" y="0.0" width="703" height="768"/>
+                        <rect key="frame" x="0.0" y="0.0" width="703.5" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EQK-WU-rdC">
@@ -36,7 +36,7 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rwr-w9-4do" customClass="CircleProgressBar">
                                                 <rect key="frame" x="29.5" y="0.0" width="100" height="100"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="100" id="ngz-nI-TBM"/>
                                                     <constraint firstAttribute="width" constant="100" id="xoa-g8-K4m"/>
@@ -90,7 +90,7 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XVk-Fz-aGf" customClass="CircleProgressBar">
                                                 <rect key="frame" x="41.5" y="0.0" width="100" height="100"/>
-                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="100" id="XXL-PY-NiC"/>
                                                     <constraint firstAttribute="height" constant="100" id="lHj-JR-uUO"/>
@@ -177,18 +177,26 @@
                                                                         <constraint firstAttribute="height" constant="20" id="HsS-nZ-Hll"/>
                                                                         <constraint firstAttribute="width" constant="355" id="ojg-LS-LvL"/>
                                                                     </constraints>
+                                                                    <userDefinedRuntimeAttributes>
+                                                                        <userDefinedRuntimeAttribute type="color" keyPath="progressTintColor">
+                                                                            <color key="value" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                                        </userDefinedRuntimeAttribute>
+                                                                    </userDefinedRuntimeAttributes>
                                                                 </view>
                                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="djp-OL-eBa">
                                                                     <rect key="frame" x="0.0" y="76.5" width="355" height="66"/>
                                                                     <subviews>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Notes:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZy-O7-5GQ">
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VZy-O7-5GQ">
                                                                             <rect key="frame" x="0.0" y="0.0" width="355" height="20.5"/>
                                                                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
                                                                         </label>
-                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Something has to be done on time before it ends" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I7N-Hs-1Cw">
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Something has to be done on time before it ends" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I7N-Hs-1Cw">
                                                                             <rect key="frame" x="0.0" y="25.5" width="355" height="40.5"/>
+                                                                            <constraints>
+                                                                                <constraint firstAttribute="height" constant="40.5" id="abM-xN-adi"/>
+                                                                            </constraints>
                                                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="17"/>
                                                                             <nil key="textColor"/>
                                                                             <nil key="highlightedColor"/>
@@ -264,7 +272,7 @@
                                 </prototypes>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="qHn-Qg-5G1" firstAttribute="leading" secondItem="rjO-dq-wKU" secondAttribute="leading" id="2vc-cv-QHT"/>
                             <constraint firstItem="vCN-Wq-BOn" firstAttribute="top" secondItem="rjO-dq-wKU" secondAttribute="top" constant="25" id="WUE-Oh-ucy"/>
@@ -442,7 +450,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="600"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="R2v-7i-eBQ">
-                                                <rect key="frame" x="15" y="15" width="290" height="570"/>
+                                                <rect key="frame" x="15" y="20" width="290" height="565"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Task View" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SHN-mR-6qb">
                                                         <rect key="frame" x="0.0" y="0.0" width="290" height="24"/>
@@ -451,7 +459,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="hsl-wf-zjP">
-                                                        <rect key="frame" x="0.0" y="46.5" width="290" height="69"/>
+                                                        <rect key="frame" x="0.0" y="45.5" width="290" height="69"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RC5-3L-4LK">
                                                                 <rect key="frame" x="0.0" y="0.0" width="290" height="34"/>
@@ -471,7 +479,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="hBR-5b-CMj">
-                                                        <rect key="frame" x="0.0" y="137.5" width="290" height="69"/>
+                                                        <rect key="frame" x="0.0" y="136" width="290" height="69"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Notes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejW-Hs-GLK">
                                                                 <rect key="frame" x="0.0" y="0.0" width="290" height="34"/>
@@ -491,7 +499,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="xie-Wv-76J">
-                                                        <rect key="frame" x="0.0" y="229" width="290" height="152"/>
+                                                        <rect key="frame" x="0.0" y="226.5" width="290" height="152"/>
                                                         <subviews>
                                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="RSU-oH-udd">
                                                                 <rect key="frame" x="0.0" y="0.0" width="290" height="31"/>
@@ -530,7 +538,7 @@
                                                         </constraints>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="BaQ-og-Kka">
-                                                        <rect key="frame" x="0.0" y="403.5" width="290" height="61"/>
+                                                        <rect key="frame" x="0.0" y="400" width="290" height="61"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress = 0%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bVM-Z9-aSr">
                                                                 <rect key="frame" x="0.0" y="0.0" width="290" height="30"/>
@@ -547,7 +555,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="hQh-kN-8qO">
-                                                        <rect key="frame" x="0.0" y="486.5" width="290" height="31"/>
+                                                        <rect key="frame" x="0.0" y="482.5" width="290" height="31"/>
                                                         <subviews>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Add Notification" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bBN-Yi-DDV">
                                                                 <rect key="frame" x="0.0" y="0.0" width="123" height="31"/>
@@ -561,7 +569,7 @@
                                                         </subviews>
                                                     </stackView>
                                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="ZOp-do-RPb">
-                                                        <rect key="frame" x="0.0" y="540" width="290" height="30"/>
+                                                        <rect key="frame" x="0.0" y="535" width="290" height="30"/>
                                                         <subviews>
                                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Ip-QS-abh">
                                                                 <rect key="frame" x="0.0" y="0.0" width="142.5" height="30"/>
@@ -591,7 +599,7 @@
                                             <constraint firstItem="R2v-7i-eBQ" firstAttribute="leading" secondItem="TpO-yX-IzA" secondAttribute="leading" constant="15" id="K4M-Ss-Df7"/>
                                             <constraint firstAttribute="bottom" secondItem="R2v-7i-eBQ" secondAttribute="bottom" constant="15" id="PRU-kP-6Ts"/>
                                             <constraint firstAttribute="height" constant="600" id="X1M-3Z-kYS"/>
-                                            <constraint firstItem="R2v-7i-eBQ" firstAttribute="top" secondItem="TpO-yX-IzA" secondAttribute="top" constant="15" id="gFY-95-hig"/>
+                                            <constraint firstItem="R2v-7i-eBQ" firstAttribute="top" secondItem="TpO-yX-IzA" secondAttribute="top" constant="20" id="gFY-95-hig"/>
                                             <constraint firstAttribute="trailing" secondItem="R2v-7i-eBQ" secondAttribute="trailing" constant="15" id="wvx-1A-pTZ"/>
                                         </constraints>
                                     </view>
